--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,54 @@
-// TODO
+.post {
+  display: flex;
+  flex-direction: column;
+  max-width: 720px;
+
+  & + a {
+    margin-top: 3.125rem;
+  }
+
+  h1 {
+    font-size: 1.75rem;
+    font-weight: 900;
+  }
+
+  p {
+    margin-top: 0.5rem;
+    font-size: 1.125rem;
+    line-height: 1.375rem;
+    text-align: justify;
+  }
+
+  .footer {
+    display: flex;
+    margin-top: 1.75rem;
+
+    svg {
+      margin-right: 0.5rem;
+    }
+
+    >span {
+      margin-left: 1.75rem;
+    }
+  }
+
+  >button {
+    border: 0;
+    height: 3rem;
+    margin-top: 4rem;
+    background: transparent;
+    font-weight: 600;
+    color: var(--highlight);
+    transition: filter 0.2s;
+    align-self: flex-start;
+
+    &:hover {
+      filter: brightness(0.8);
+    }
+  }
+
+  &:hover strong {
+    color: var(--highlight);
+  }
+}
+
