--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,46 @@
-// TODO
+.postContent {
+  >img {
+    width: 100%;
+    height: 25rem;
+  }
+
+  h1 {
+    margin: 5rem 0;
+    font-size: 3rem;
+    font-weight: 700;
+  }
+
+  ul {
+    margin-top: 1.5rem;
+    list-style: none;
+    color: var(--gray-300);
+    display: flex;
+
+    li {
+      font-size: 0.875rem;
+      display: flex;
+      align-items: center;
+
+      & + li {
+        margin-left: 1.5rem;
+      }
+
+      svg {
+        height: 20px;
+        width: 20px;
+        margin-right: 0.5rem;
+      }
+    }
+  }
+}
+
+.postText {
+  margin: 4rem 0;
+
+  h2 {
+    font-size: 2.25rem;
+    font-weight: bold;
+    color: var(--gray-100);
+    margin-bottom: 3rem;
+  }
+}
